<resources>
    <string name="app_name">Epoptia</string>
    <string name="action_type">action_type</string>
    <string name="device_admin_description">device_admin_description</string>

    <string name="welcome">Καλωσήρθατε!</string>
    <string name="image_desc">image_desc</string>

    <!-- Parcelable keys -->
    <string name="device_view_model_parcel">device_view_model_parcel</string>
    <string name="kioskmode_view_model_parcel">kioskmode_view_model_parcel</string>
    <string name="login_view_model_parcel">login_view_model_parcel</string>
    <string name="workstation_view_model_parcel">workstation_view_model_parcel</string>
    <string name="stationworkers_view_model_parcel">stationworkers_view_model_parcel</string>

    <!-- Fragment Tags -->
    <string name="login_activity_retain_fragment">login_activity_retain_fragment</string>
    <string name="work_stations_retain_fragment">work_stations_retain_fragment</string>
    <string name="kioskmode_retain_fragment">kioskmode_retain_fragment</string>
    <string name="station_workers_retain_fragment">station_workers_retain_fragment</string>

    <!-- Shared Prefs -->
    <string name="domain_authenticated">domain_authenticated</string>
    <string name="device_locked">device_locked</string>
    <string name="device_is_awake">device_powered_off</string>
    <string name="access_token">access_token</string>
    <string name="admin_username">admin_username</string>
    <string name="admin_password">admin_password</string>
    <string name="is_working">is_working</string>

    <!-- Login Admin Activity -->
    <string name="subdomain">subdomain</string>
    <string name="subdomain_hint">Subdomain</string>
    <string name="admnusername_hint">Όνομα χρήστη</string>
    <string name="admnpassword_hint">Κωδικός πρόσβασης</string>
    <string name="submit">Υποβολη</string>
    <string name="subdomain_required">Το domain είναι υποχρεωτικό.</string>
    <string name="subdomain_not_valid">Το subdomain δεν είναι έγκυρο.</string>
    <string name="error">Ενα σφάλμα έχει προκύψει.</string>
    <string name="no_connection">Χωρίς σύνδεση στο δίκτυο.</string>
    <string name="username_password_required">Το όνομα χρήστη και ο κωδικός πρόσβασης είναι υποχρεωτικά.</string>
    <string name="username_password_invalid">Το όνομα χρήστη ή ο κωδικός πρόσβασης δεν είναι έγκυρα.</string>
    <string name="device_is_tablet">Η συσκευή είναι κατηγορίας tablet.</string>
    <string name="device_is_phone">Η συσκευή είναι κατηγορίας phone.</string>

    <!-- Work Stations Activity -->
    <string name="work_stations_title">Σταθμοί Εργασίας</string>
    <string name="lock">Κλείδωμα</string>
    <string name="lock_device_dialog_title">Κλείδωμα συσκευής</string>
    <string name="lock_device_dialog_msg">Η συσκευή θα κλειδώσει. Είστε σίγουρος?</string>
    <string name="yes">Ναι</string>
    <string name="no">Οχι</string>

    <!-- Kiosk Mode Activity -->
    <string name="station_workers_frgmt">station_workers_frgmt</string>
    <string name="system_dahsboard_frgmt">system_dahsboard_frgmt</string>
    <string name="pdfviewer_frgmt">pdfviewer_frgmt</string>
    <string name="top_backstack_entry_id">top_backstack_entry_id</string>
    <string name="workstation_id">workstation_id</string>
    <string name="stationame">stationame</string>

    <string name="workers_frgmt_title">Εργαζόμενοι Σταθμού Εργασίας</string>
    <string name="workers_frgmt_portrait_title">Εργ. Στ.</string>
    <string name="systemdash_frgmt_title">Στ. εργασίας</string>

    <string name="image_uploading">Παρακαλώ περιμένετε…</string>
    <string name="image_uploaded_successfully">Η φωτογραφία ανέβηκε επιτυχώς.</string>
    <string name="retry">Ξαναπροσπαθησε</string>
    <string name="unlock">Ξεκλειδωμα</string>
    <string name="logout">Αποσύνδεση</string>
    <string name="enter_worker_password_dialog_title">Κωδικός Εργαζομένου</string>
    <string name="enter_admin_cred_dialog_title">Στοιχεία διαχειριστή</string>

</resources>
