<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="android.view.View" />

        <variable
            name="loginViewModel"
            type="kioskmode.com.epoptia.login.model.LoginViewModel" />

    </data>

    <LinearLayout
        android:id="@+id/containerLnlt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingTop="35dp">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:src="@drawable/logo"
            android:layout_marginBottom="30dp"
            android:contentDescription="@string/image_desc" />

        <TextView
            android:id="@+id/deviceCategoryTtv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/subDomainEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/subdomain_hint"
                android:text="@={loginViewModel.subDomain}"
                android:textSize="13sp"
                android:enabled="@{!loginViewModel.subDomainIsValid}"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="xxxxx.epoptia.com" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/usernameTxtInputLyt"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:visibility="@{loginViewModel.subDomainIsValid ? View.VISIBLE : View.GONE}">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/usernameEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/admnusername_hint"
                android:text="@={loginViewModel.username}"
                android:textSize="13sp"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordTxtInputLyt"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:visibility="@{loginViewModel.subDomainIsValid ? View.VISIBLE : View.GONE}">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/passwordEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/admnpassword_hint"
                android:text="@={loginViewModel.password}"
                android:textSize="13sp"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/submitBtn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_marginTop="15dp" />

        <ProgressBar
            android:id="@+id/prgrsBr"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:visibility="@{loginViewModel.processing ? View.VISIBLE : View.GONE}" />

    </LinearLayout>

</layout>
